v1.4.4
- Fix for editable fields toggling.
- Fix for relying on JS injection, using replacement instead.
- Fix for quoting and macro escaping issue.
- Fix for numeric GET parameters.
- Fix for currency symbol l10n issues.
- Fix for multiplied display of unique locations.
- Fix for profile cancellation GCal integration issue.
- Added worker montly calendar paging support.
- Added the Default Service add-on.
- Added the Pending Appointments count notification add-on.

v1.4.3.1
- Fix for date/time parsing problem with inital formatting.

v1.4.3
- Fix for emails on bulk status changes.
- Fix for filtering the worker names in the widget.
- Fix for date/time parsing problem with certain locales.
- Added reordering worker services by requested order.
- Added the registration URL to list of supported actions.

v1.4.2
- Fix for quotes escaping issue with injected javascript.
- Fix for permissions issue with bbpress/buddypress pages registration.
- Fix for colorpicker localized dependencies loading issue.
- Added "strict" shortcode argument to app_my_appointments shortcode.

v1.4.1
- Fix for confirmation emails sent on purchase via MarketPress integration.
- Fix for services with different durations not properly allocating free times.
- Fix for BuddyPress redirects.
- Fix for GCal synchronisation on non-immediate actions.
- Fix for GCal exception handling.
- Fix for page creation issue with concurrent settings change.
- Fix for Additional Fields add-on deletion when there's only one field.
- Fix for administrative permissions (props Ash).
- Added additional fields placeholders for GCal sync.
- Added the import-only GCal integration mode.
- Fixed overlaps in time selections.
- Added service paddings add-on.
- Added stackable break times option to durations add-on.
- Added shared resources add-on.
- Improved MarketPress integration for new appointments.
- Refactored install and uninstall routines.

v1.4
- Allowing for optional Google SDK dependencies loading.